# ORB_SLAM3_ROS2

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
Examples/Monocular/: webcam_new.yaml
ros2_wrapper/src/orb_slam3_pkg/: CMakeLists.txt  package.xml
ros2_wrapper/src/orb_slam3_pkg/launch/: orb_slam3.launch.py
ros2_wrapper/src/orb_slam3_pkg/src/: orb_slam3_node.cpp  video_publisher.cpp
